--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,13 +20,13 @@
         </a>
         
       </li>-->
-      <li class="nav-item">
+      <!--<li class="nav-item">
         <a routerLink="/characteristic" routerLinkActive="active">
           <i class="fas fa-tags"></i>
           <span>Characteristic</span>
         </a>
         
-      </li>
+      </li>-->
       
       <li class="nav-item">
         <a routerLink="/bom" routerLinkActive="active">
